--- a/src/main/resources/quiz.fxml
+++ b/src/main/resources/quiz.fxml
@@ -72,7 +72,7 @@
                   <Font name="Calibri" size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton id="RadioButton" fx:id="opt1" layoutX="290.0" layoutY="210.0" mnemonicParsing="false" onAction="#opt1clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" wrapText="true">
+            <RadioButton id="RadioButton" fx:id="opt1" layoutX="294.0" layoutY="210.0" mnemonicParsing="false" onAction="#opt1clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" wrapText="true">
                <font>
                   <Font name="Calibri" size="14.0" />
                </font>
@@ -82,6 +82,7 @@
                   <Font name="Calibri" size="14.0" />
                </font>
             </RadioButton>
+            <Button fx:id="nextQ" layoutX="767.0" layoutY="462.0" mnemonicParsing="false" onAction="#nextQuestionj" prefHeight="47.0" prefWidth="113.0" text="Button" />
          </children>
       </AnchorPane>
    </center>
