--- a/src/main/resources/CSS/styles.css
+++ b/src/main/resources/CSS/styles.css
@@ -1,19 +1,36 @@
 
+#nextButton {
+    -fx-background-color: #9D8DF1;
+    -fx-text-fill:  #fffaf0;
+}
+
+#nextButton: hover {
+    -fx-background-color: #5a02b2;
+    -fx-text-fill:  #5a02b2;
+
+}
+
+
+
 #RadioButton .radio{
      -fx-border-width: 1px;
-     -fx-border-color: -fx-darkest-grey-color;
      -fx-background-color: #fffaf0;
      -fx-background-image: null;
      -fx-border-radius: 15px;
      -fx-padding: 3px;
+
 }
 
 /* Define styles for when the RadioButton is hovered */
-#RadioButton:hover {
-    -fx-background-color
+#RadioButton:hover .radio{
+    -fx-background-color: #9D8DF1;
+    -fx-mark-color:  #5a02b2;
+
 }
 
 /* Define styles for when the RadioButton is selected/pressed */
 #RadioButton:selected {
     -fx-mark-color:  #9D8DF1;
+
 }
+
