--- a/src/main/resources/quiz.fxml
+++ b/src/main/resources/quiz.fxml
@@ -5,6 +5,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -49,7 +52,7 @@
       <AnchorPane prefHeight="650.0" prefWidth="1059.0" BorderPane.alignment="CENTER">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="FLORALWHITE" height="400.0" layoutX="230.0" layoutY="110.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-: #FFFAF0;" styleClass="myRadioButton" width="600.0" />
-            <Label fx:id="question" layoutX="299.0" layoutY="141.0" text="What is Programming?" textFill="#5a02b2">
+            <Label fx:id="question" layoutX="299.0" layoutY="126.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="54.0" prefWidth="494.0" text="What is Programming?" textFill="#5a02b2" wrapText="true">
                <font>
                   <Font name="Calibri Bold" size="20.0" />
                </font>
@@ -66,23 +69,43 @@
             <RadioButton id="RadioButton" fx:id="opt2" layoutX="290.0" layoutY="275.0" mnemonicParsing="false" onAction="#opt2clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" wrapText="true">
                <font>
                   <Font name="Calibri" size="14.0" />
-               </font></RadioButton>
-            <RadioButton id="RadioButton" fx:id="opt4" layoutX="290.0" layoutY="405.0" mnemonicParsing="false" onAction="#opt4clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" wrapText="true">
+               </font>
+               <toggleGroup>
+                  <ToggleGroup fx:id="optionToggle" />
+               </toggleGroup></RadioButton>
+            <RadioButton id="RadioButton" fx:id="opt4" layoutX="290.0" layoutY="405.0" mnemonicParsing="false" onAction="#opt4clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" toggleGroup="$optionToggle" wrapText="true">
                <font>
                   <Font name="Calibri" size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton id="RadioButton" fx:id="opt1" layoutX="294.0" layoutY="210.0" mnemonicParsing="false" onAction="#opt1clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" wrapText="true">
+            <RadioButton id="RadioButton" fx:id="opt1" layoutX="294.0" layoutY="210.0" mnemonicParsing="false" onAction="#opt1clicked" prefHeight="42.0" prefWidth="490.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" toggleGroup="$optionToggle" wrapText="true">
                <font>
                   <Font name="Calibri" size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton id="RadioButton" fx:id="opt3" layoutX="290.0" layoutY="340.0" mnemonicParsing="false" onAction="#opt3clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" wrapText="true">
+            <RadioButton id="RadioButton" fx:id="opt3" layoutX="290.0" layoutY="340.0" mnemonicParsing="false" onAction="#opt3clicked" prefHeight="41.0" prefWidth="458.0" style="-: pink;" styleClass="RadioButton" stylesheets="@CSS/styles.css" text="The process or activity of writing computer programs." textFill="#5a02b2" toggleGroup="$optionToggle" wrapText="true">
                <font>
                   <Font name="Calibri" size="14.0" />
                </font>
             </RadioButton>
-            <Button fx:id="nextQ" layoutX="767.0" layoutY="462.0" mnemonicParsing="false" onAction="#nextQuestionj" prefHeight="47.0" prefWidth="113.0" text="Button" />
+            <Button id="nextButton" fx:id="next" layoutX="783.0" layoutY="459.0" mnemonicParsing="false" onAction="#onNextButtonClicked" prefHeight="90.0" prefWidth="90.0" style="-fx-background-radius: 45px;" text="Next" textFill="FLORALWHITE">
+               <font>
+                  <Font name="Calibri Bold" size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <stylesheets>
+                  <URL value="@CSS/styles.css" />
+                  <URL value="@CSS/styles.css" />
+               </stylesheets>
+            </Button>
+            <ImageView fitHeight="291.0" fitWidth="135.0" layoutX="66.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="261.0" fitWidth="251.0" layoutX="22.0" layoutY="298.0">
+               <image>
+                  <Image url="@quizzard1.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </center>
