--- a/src/main/resources/quiz.fxml
+++ b/src/main/resources/quiz.fxml
@@ -45,6 +45,13 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <ImageView fitHeight="125.0" fitWidth="200.0" layoutX="57.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="125.0" fitWidth="200.0" layoutX="67.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="128.0" fitWidth="346.0" layoutX="-7.0" layoutY="5.0">
+               <image>
+                  <Image url="@quizfinallogo.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </top>
@@ -57,7 +64,7 @@
                   <Font name="Calibri Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="252.0" layoutY="139.0" text="Q1." textFill="#5a02b2">
+            <Label fx:id="questionNumLabel" layoutX="252.0" layoutY="139.0" text="Q1." textFill="#5a02b2">
                <font>
                   <Font name="Calibri Bold" size="24.0" />
                </font>
