--- a/src/main/resources/stats.fxml
+++ b/src/main/resources/stats.fxml
@@ -1,20 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import java.net.URL?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Stats">
-   <children>
-      <BarChart layoutX="14.0" prefHeight="215.0" prefWidth="404.0">
-        <xAxis>
-          <CategoryAxis label="User vs All Users" prefHeight="24.0" prefWidth="339.0" side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis label="Score" minorTickCount="1" side="LEFT" tickLabelGap="1.0" upperBound="6.0" />
-        </yAxis>
-      </BarChart>
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #E6E6E9;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.StatsController">
+   <stylesheets>
+      <URL value="@CSS/styles.css" />
+   </stylesheets>
+   <top>
+      <AnchorPane prefHeight="129.0" prefWidth="1024.0" style="-fx-background-color: #5A02B2;" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="660.0" layoutY="38.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Stats" textFill="#0c021f">
+               <font>
+                  <Font name="Calibri Bold" size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="480.0" layoutY="38.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Home" textFill="#0c021f">
+               <font>
+                  <Font name="Calibri Bold" size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="840.0" layoutY="38.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Exit" textFill="#0c021f">
+               <font>
+                  <Font name="Calibri Bold" size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="125.0" fitWidth="200.0" layoutX="57.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="125.0" fitWidth="200.0" layoutX="67.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="128.0" fitWidth="346.0" layoutX="-7.0" layoutY="5.0">
+               <image>
+                  <Image url="@quizfinallogo.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+   </top>
+   <center>
+      <AnchorPane prefHeight="650.0" prefWidth="1059.0" BorderPane.alignment="CENTER">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="FLORALWHITE" height="400.0" layoutX="84.0" layoutY="160.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-: #FFFAF0;" width="270.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="FLORALWHITE" height="400.0" layoutX="704.0" layoutY="160.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-: #FFFAF0;" width="270.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="FLORALWHITE" height="400.0" layoutX="394.0" layoutY="160.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-: #FFFAF0;" width="270.0" />
+            <Label fx:id="yourStats" layoutX="84.0" layoutY="60.0" prefHeight="55.0" prefWidth="890.0" style="-fx-alignment: center;" text="Your Statistics, Justyna!" textAlignment="CENTER" textFill="#5a02b2">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Label>
+            <Text fill="#9d8df1" layoutX="161.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mean">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Text>
+            <Text fill="#9d8df1" layoutX="716.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-text-alignment: center;" text="Standard Deviation" textAlignment="CENTER" wrappingWidth="246.91571044921875">
+               <font>
+                  <Font name="Calibri Bold" size="36.0" />
+               </font>
+            </Text>
+            <Text fill="#9d8df1" layoutX="458.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Median">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Text>
+            <Label fx:id="yourMean" layoutX="192.0" layoutY="285.0" text="5.2" textFill="#5a02b2">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label fx:id="yourSD" layoutX="805.0" layoutY="284.0" text="5.2" textFill="#5a02b2">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label fx:id="yourMedian" layoutX="497.0" layoutY="288.0" text="5.2" textFill="#5a02b2">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Label>
+            <Text fill="#9d8df1" layoutX="172.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Mean">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
+            <Text fill="#9d8df1" layoutX="795.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your S.D">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
+            <Text fill="#9d8df1" layoutX="473.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Median">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
+            <Label fx:id="userMean" layoutX="192.0" layoutY="411.0" text="5.2" textFill="#5a02b2">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label fx:id="userSD" layoutX="805.0" layoutY="411.0" text="5.2" textFill="#5a02b2">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label fx:id="userMedian" layoutX="497.0" layoutY="411.0" text="5.2" textFill="#5a02b2">
+               <font>
+                  <Font name="Calibri Bold" size="48.0" />
+               </font>
+            </Label>
+            <Text fill="#9d8df1" layoutX="172.0" layoutY="487.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Mean">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
+            <Text fill="#9d8df1" layoutX="795.0" layoutY="487.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User S.D">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
+            <Text fill="#9d8df1" layoutX="473.0" layoutY="487.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Median">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+   </center>
+</BorderPane>
