--- a/src/main/resources/score.fxml
+++ b/src/main/resources/score.fxml
@@ -20,7 +20,7 @@
    <top>
       <AnchorPane prefHeight="129.0" prefWidth="1024.0" style="-fx-background-color: #5A02B2;" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="660.0" layoutY="38.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Stats" textFill="#0c021f">
+            <Button fx:id="statsBtn" layoutX="660.0" layoutY="38.0" mnemonicParsing="false" onAction="#goToStats" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Stats" textFill="#0c021f">
                <font>
                   <Font name="Calibri Bold" size="24.0" />
                </font>
@@ -28,7 +28,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="480.0" layoutY="38.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Home" textFill="#0c021f">
+            <Button fx:id="homeBtn" layoutX="480.0" layoutY="38.0" mnemonicParsing="false" onAction="#goHome" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Home" textFill="#0c021f">
                <font>
                   <Font name="Calibri Bold" size="24.0" />
                </font>
@@ -36,7 +36,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="840.0" layoutY="38.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Exit" textFill="#0c021f">
+            <Button fx:id="exit" layoutX="840.0" layoutY="38.0" mnemonicParsing="false" onAction="#exitApp" prefHeight="55.0" prefWidth="141.0" style="-fx-background-color: #9D8DF1;" text="Exit" textFill="#0c021f">
                <font>
                   <Font name="Calibri Bold" size="24.0" />
                </font>
