--- a/src/main/resources/quiz.fxml
+++ b/src/main/resources/quiz.fxml
@@ -45,9 +45,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <ImageView fitHeight="125.0" fitWidth="200.0" layoutX="57.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="125.0" fitWidth="200.0" layoutX="67.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="128.0" fitWidth="346.0" layoutX="-7.0" layoutY="5.0">
+            <ImageView fitHeight="128.0" fitWidth="346.0">
                <image>
                   <Image url="@quizfinallogo.png" />
                </image>
@@ -113,7 +111,7 @@
                   <Image url="@quizzard1.png" />
                </image>
             </ImageView>
-            <Label fx:id="timer" layoutX="317.0" layoutY="46.0" text="You have 30 Seconds left!" textFill="#9d8df1">
+            <Label fx:id="timer" layoutX="317.0" layoutY="46.0" textFill="#9d8df1">
                <font>
                   <Font name="Calibri Bold" size="36.0" />
                </font>
